<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/lessons_template"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonSum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/sep_sizeM"
                android:background="@drawable/patch_yellow"
                android:text="@string/view_lesson_sum"
                android:textSize="@dimen/font_sizeL"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonBad"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/sep_sizeM"
                android:layout_weight="1"
                android:background="@drawable/patch_red"
                android:text="@string/button_bad"
                android:textSize="@dimen/font_sizeM"/>

            <Button
                android:id="@+id/buttonGood"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/sep_sizeM"
                android:layout_weight="1"
                android:background="@drawable/patch_green"
                android:text="@string/button_good"
                android:textSize="@dimen/font_sizeM"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonRepeat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/sep_sizeM"
                android:background="@drawable/patch_cyan"
                android:text="@string/menu_repeat"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonLessons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/sep_sizeM"
                android:background="@drawable/patch_cyan"
                android:text="@string/menu_lessons"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
